# api/swagger/swagger.yaml
@@ -240,6 +240,26 @@ paths:
           schema:
             $ref: "#/definitions/ErrorResponse"
 
+    delete:
+      description: Deletes an enterprise from the directory
+      security:
+        - oauth-directory-admin: []
+      # call this method name on the controller
+      operationId: deleteEnterprise
+      parameters:
+        - name: id
+          in: path
+          description: ID of enterprise to fetch
+          required: true
+          type: string
+      responses:
+        "200":
+          description: Success
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+
     patch:
       consumes:
         - application/merge-patch+json
